[grivero] fixed: text calculate by packaging, select dropdown, weight icon in search, rate spacing, trayecto bar ++ adding new component searchResult
Former-commit-id: c9dc8807ae3f5e6b4d2470a658c064dbf530005a [formerly f81aa0bb7d121f46d10686fd6c9bc7c3fc90ac86]
Former-commit-id: b0f945975d0ab56f6cd633b33649676875033d38

--- a/resources/sass/custom_app.scss
+++ b/resources/sass/custom_app.scss
@@ -67,7 +67,8 @@ div,
         height: 17px;
         padding: 0px;
         right: 10px;
-        top: 9px;
+        top: 17px;
+        z-index: 5;
     }
 
     .multiselect__tags {
